--- a/style/summary.css
+++ b/style/summary.css
@@ -1,6 +1,3 @@
-@import url(./style/standart.css);
-@import url(./style/summary.css);
-
 :root {
   --summary-color: #f6f7f8;
   --header-color: #ffffff;
@@ -174,7 +171,10 @@ body {
 
 /** ToDo Card Styles ***/
 .todo-content{
-
+    display: flex;
+    justify-content: space-between;
+    gap: 16px;
+    align-items: center;
 } 
 .todo-picture{
   
