--- a/style/summary.css
+++ b/style/summary.css
@@ -49,7 +49,7 @@ body {
   margin: 0px;
   padding: 0;
   background-color: var(--summary-color);
-  margin-top: 176px;
+  margin-top: 80px;
 }
 
 .summary-header {
@@ -70,21 +70,32 @@ body {
   color: var(--text-color);
   margin-left: 348px;
 }
-
+#summary-title-360{
+  font-size: 61px;
+  font-weight: 700;
+}
 .summary-title-text {
   font-family: "Inter", serif;
-  font-weight: 700;
-  font-size: 61px;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 27px;
   color: var(--text-color);
-  padding-left: 348px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 24px;
+}
+.summary-title-separator{
+  width: 0px;
+  height: 59px;
+  border: 3px solid var(--inter-text-accent-color);
+  border-radius: 8px;
 }
 
 /*** Board Overview Section ***/
 .summary-board-overview {
   width: 600px;
   height: auto;
-  margin-left: 348px;
-  margin-top: 100px;
 }
 .summary-board-overview-row-1 {
   display: flex;
@@ -171,14 +182,33 @@ body {
 
 /** ToDo Card Styles ***/
 .todo-content{
-    display: flex;
-    justify-content: space-between;
-    gap: 16px;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  gap: 16px;
+  align-items: center;
 } 
-.todo-picture{
-  
-} 
-.todo-value{
 
+
+.summary-content{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 148px;
+  margin-left: 348px;
+}
+
+.summary-greetings{
+  font-family: "Inter", serif;
+  font-weight: 500;
+  font-style: normal;
+  font-size: 47px;
+  color: var(--text-color);
+  margin-left: 150px;
+}
+#summary-greetings-name{
+  font-family: "Inter", serif;
+  font-weight: 700;
+  font-style: bold;
+  font-size: 64px;
+  color: var(--inter-text-accent-color);
 }
