--- a/style/navbar.css
+++ b/style/navbar.css
@@ -6,7 +6,7 @@
 }
 
 .navbar-logo {
-    margin-top: 80px;
+    margin-top: 64px;
     width: 40%;
 }
 
@@ -18,7 +18,6 @@
     align-items: center;
     gap: 15px;
     width: 100%;
-    position: relative;
 }
 
 .nav-list li {
@@ -27,18 +26,28 @@
 }
 
 .nav-list li a img {
-    /* position: absolute;
-    left: 50%; */
-    /* margin: auto; */
+    padding-left: 20%; 
 }
 
 .navbar-link {
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
     gap: 8px;
     color: white;
     width: 100%;
+    height: 46px;
+}
+
+.navbar-link-content {
+    display: flex;
+    align-items: center;
+    min-width: 200px;
+    gap: 8px;
+}
+
+.navbar-link:hover {
+    background-color: #091931;
 }
 
 .navbar_img {
@@ -46,10 +55,25 @@
     height: 30px;
 }
 
+
 .navbar-footer {
     list-style: none;
+    margin-bottom: 64px;
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
 }
 
 .navbar-footer a {
-    color: white;
+    color: #A8A8A8;
+    height: 35px;
+}
+
+.navbar-footer-link p {
+    height: 19px;
+    padding: 8px;
+}
+
+.navbar-active {
+    background-color: #091931;
 }
