Add event icon and update create task button styles
Added a new event.svg icon to the assets. Updated the .creat_task_btn class in add_task.css to improve styling, including border radius, padding, font size, and hover effect for better user experience.

--- a/style/add_task.css
+++ b/style/add_task.css
@@ -148,10 +148,25 @@ button {
 
 .clear_btn {
   border: 1px solid #2a3647;
+
 }
 
 .creat_task_btn {
-  color: #ffffff;
-  background: #2a3647;
-  border: none;
+  border-radius: 10px;
+  border: 1px solid transparent;
+  background-color: #2a3647;
+  color: white;
+  padding: 0.2em 0.6em;
+  font-size: 1.5rem;
+  font-weight: 400;
+  cursor: pointer;
+  height: 1.75em;
+  display: flex;
+  align-items: center;
+  transition: background-color 125ms ease-in-out;
 }
+
+.creat_task_btn:hover {
+  background-color: #29abe2;
+}
+
