--- a/style/summary.css
+++ b/style/summary.css
@@ -6,6 +6,7 @@
   --text-color: #000000;
   --inter-text-color: #2a3647;
   --inter-text-accent-color: #29abe2;
+  --seperator-color: #D1D1D1;
 }
 
 body {
@@ -21,6 +22,9 @@ body {
   font-style: bold;
   font-size: 20px;
   color: var(--text-color);
+  display: flex;
+  justify-content: center;
+  text-align: center;
 }
 
 .summary-text-2 {
@@ -28,6 +32,7 @@ body {
   font-weight: 400;
   font-style: normal;
   color: var(--inter-text-color);
+  gap: 13px;
 }
 
 .summary-text-3 {
@@ -71,6 +76,13 @@ body {
   font-size: 21px;
   color: var(--side-active-color);
 }
+.summary-text-9{
+  font-family: "Inter", serif;
+  font-weight: 700;
+  font-size: 21px;
+  color: var(--inter-text-color);
+  align-items: start;
+}
 
 .summary-title {
   width: 100%;
@@ -85,6 +97,7 @@ body {
   height: 96px;
   background-color: var(--header-color);
   display: flex;
+  justify-content: space-between;
   align-items: center;
   isolation: isolate;
   box-shadow: 0 4px 4px rgba(0, 0, 0, 0.1);
@@ -113,11 +126,17 @@ body {
   align-items: center;
   gap: 24px;
 }
-.summary-title-separator{
+.summary-title-separator-blue{
   width: 0px;
   height: 59px;
-  border: 3px solid var(--inter-text-accent-color);
-  border-radius: 8px;
+  border: 2px solid var(--inter-text-accent-color);
+  border-radius: 3px;
+}
+.summary-title-separator-grey{
+  width: 0px;
+  height: 102px;
+  border: 2px solid var(--seperator-color);
+  border-radius: 3px;
 }
 
 /*** Board Overview Section ***/
@@ -161,7 +180,6 @@ body {
   align-items: center;
   gap: 64px;
 }
-
 .summary-board-overview-urgent {
   width: 100%;
   height: 168px;
@@ -215,7 +233,6 @@ body {
   align-items: center;
   flex-direction: column;
 }
-
 /** ToDo Card Styles ***/
 .todo-content{
   display: flex;
@@ -223,8 +240,6 @@ body {
   gap: 16px;
   align-items: center;
 } 
-
-
 .summary-content{
   display: flex;
   justify-content: center;
@@ -232,7 +247,6 @@ body {
   margin-top: 80px;
   margin-left: 348px;
 }
-
 .summary-greetings{
   font-family: "Inter", serif;
   font-weight: 500;
@@ -247,4 +261,17 @@ body {
   font-style: bold;
   font-size: 64px;
   color: var(--inter-text-accent-color);
+}
+
+/** Profile Header Styles **/
+.profil-header{
+  width: 56px;
+  height: 56px;
+  border-radius: 50%;
+  background-color: white;
+  border: 2px solid black;
+  top: 28px;
+  right: 48px;
+  display: flex;
+  align-items: center;
 }
