--- a/style/contacts.css
+++ b/style/contacts.css
@@ -36,6 +36,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    border-width: 0;
     border-radius: 10px;
     margin: 22.5px 0;
     padding: 12px 16px;
@@ -46,12 +47,10 @@
 
 .add-new-contact-btn:hover {
     background-color: #29abe2;
-    border-color: #29abe2;
 }
 
 .add-new-contact-btn:active {
     background-color: #091931;
-    border-color: #091931;
 }
 
 .add-new-contact-btn p {
