--- a/style/sign_up.css
+++ b/style/sign_up.css
@@ -12,8 +12,23 @@
     gap: 32px;
 }
 
-/* sign up section header align */
+/* back arrow design and position */
+.sign_up_section .sign_up_back_arrow {
+    position: relative;
+    right: 250px;
+    top: 10px;
+    cursor: pointer;
+}
+
 .sign_up_section header {
+    display: flex;
+    align-items: center;
+    gap: 16px;
+    position: relative;
+}
+
+/* sign up section header h1 and underline align */
+.sign_up_section header .sign_up_logo {
     display: flex;
     flex-direction: column;
     align-items: center;
