--- a/style/contacts.css
+++ b/style/contacts.css
@@ -19,7 +19,7 @@
     width: 60%;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: flex-start;
     align-items: flex-start;
 }
 
@@ -86,7 +86,7 @@
     padding: 15px 24px;
 }
 
-.vector-img {
+.svg-img-small {
     height: 42px;
     width: 42px;
 }
@@ -127,6 +127,38 @@
 .contacts-header-txt {
     font-size: 27px;
     font-weight: 400;
+}
+
+.contact-info-big {
+    display: flex;
+    gap: 54px;
+    margin-left: 32px;
+}
+
+.svg-img-big {
+    height: 120px;
+    width: 120px;
+}
+
+.contact-btn-img {
+    width: 24px;
+    height: 24px;
+}
+
+.contact-info-big-name {
+    font-size: 47px;
+    font-weight: 500;
+}
+
+.contact-info-big-edit {
+    display: flex;
+}
+
+.contact-btn {
+    display: flex;
+    align-items: center;
+    border-width: 0;
+    gap: 8px;
 }
 
 .d_none {
