--- a/style/add_task.css
+++ b/style/add_task.css
@@ -1,20 +1,26 @@
+*{
+    box-sizing: border-box;
+
+}
+.w100{
+  width: 100% !important;
+}
+
 form {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  width: 80%;
+  width: 90%;
   height: 60%;
-  margin-left: 10%;
+  margin-left: 5%;
   margin-top: 5%;
 }
 
-form div {
-  width: 100%;
-}
+
 
 h2 {
   margin-top: 5%;
-  margin-left: 10%;
+  margin-left: 5%;
 }
 
 .input_container {
@@ -23,7 +29,7 @@ h2 {
   justify-content: space-between;
 }
 
-.input_container button {
+.priority_wrapper button {
   display: flex;
   flex-direction: row;
 
@@ -44,6 +50,29 @@ h2 {
   font-weight: 400;
   font-style: Regular;
   font-size: 20px;
+  background: #ffffff;
+}
+
+.priority_wrapper button:hover {
+  box-shadow: 0px 0px 4px 0px #0000001a;
+}
+
+.medium_btn_activ {
+  background: #ffa800;
+
+  color: #ffffff;
+}
+
+.medium_btn svg {
+  color: #ffa800;
+}
+
+.urgent_btn_active {
+  background: #ff3d00;
+}
+
+.low_btn_active {
+  background: #7ae229;
 }
 
 label {
@@ -64,7 +93,7 @@ span {
 }
 
 input {
-  width: 80%;
+  width: 100%;
 
   opacity: 1;
   padding-top: 12px;
@@ -93,7 +122,6 @@ select {
 hr {
   width: 0px;
   height: 100%;
-
   opacity: 1;
   border-width: 1px;
   border: 1px solid #d1d1d1;
@@ -109,22 +137,6 @@ button {
   padding-left: 10px;
   gap: 8px;
   border-radius: 10px;
-}
-
-.urgent_btn {
-  background: #ffffff;
-  box-shadow: 0px 0px 4px 0px #0000001a;
-}
-
-.medium_btn {
-  background: #ffa800;
-  box-shadow: 0px 0px 4px 0px #0000001a;
-  color: #ffffff;
-}
-
-.low_btn {
-  background: #ffffff;
-  box-shadow: 0px 0px 4px 0px #0000001a;
 }
 
 .submit_container {
@@ -148,7 +160,6 @@ button {
 
 .clear_btn {
   border: 1px solid #2a3647;
-
 }
 
 .creat_task_btn {
@@ -170,3 +181,50 @@ button {
   background-color: #29abe2;
 }
 
+.assignet_pb {
+  background-color: #7ae229;
+  border-radius: 100%;
+  width: 16px;
+  height: 16px;
+  margin-right: 8px;
+}
+
+.asssigned_to button:hover {
+  background-color: #2a3647;
+}
+
+.asssigned_to_checkbox{
+    position: relative;
+    right: 0;
+    width: 20px;
+}
+
+.asssigned_to input{
+    border: 1px solid #29ABE2;
+    width: 100%;
+}
+
+.contacts{
+   max-height: 180px;  
+  overflow-y: auto;  
+  
+}
+
+.single_contact{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+   width: 100% !important;
+  border-radius: 0;
+  height: 20px;
+  text-align: center;
+  white-space: nowrap;
+  border: 0;
+  border-radius: 10px;
+}
+
+.single_contact div{
+  display: flex;
+  flex-direction: row;
+}
