--- a/style/add_task.css
+++ b/style/add_task.css
@@ -1,12 +1,11 @@
-main *{
-    box-sizing: border-box;
-
+* {
+  box-sizing: border-box;
 }
-.w100{
+.w100 {
   width: 100% !important;
 }
 
-.w80{
+.w80 {
   width: 80%;
 }
 
@@ -19,8 +18,6 @@ form {
   margin-left: 5%;
   margin-top: 5%;
 }
-
-
 
 h2 {
   margin-top: 5%;
@@ -143,6 +140,7 @@ button {
   border-radius: 10px;
 }
 
+
 .submit_container {
   display: flex;
   justify-content: flex-end;
@@ -188,38 +186,50 @@ button {
 .assignet_pb {
   background-color: #7ae229;
   border-radius: 100%;
-  width: 16px;
-  height: 16px;
+  width: 20px;
+  height: 20px;
   margin-right: 8px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  line-height: 1;
 }
 
-.asssigned_to button:hover {
-  background-color: #2a3647;
+.asssigned_to button{
+  background-color: #ffffff;
 }
 
-.asssigned_to_checkbox{
-    position: relative;
-    right: 0;
-    width: 20px;
+.asssigned_to li:hover {
+  background: #EEEEEE;
+
 }
 
-.asssigned_to input{
-    border: 1px solid #29ABE2;
-    width: 100%;
+.asssigned_to_checkbox {
+  position: relative;
+  right: 0;
+  width: 20px;
 }
 
-.contacts{
-   max-height: 180px;  
-  overflow-y: auto;  
-  
+.asssigned_to input {
+  border: 1px solid #29abe2;
+  width: 100%;
 }
 
-.single_contact{
+.contacts {
+  max-height: 180px;
+  overflow-y: auto;
+}
+
+.checkbox{
+  height: 16px;
+}
+
+.single_contact {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-   width: 100% !important;
+  width: 100% !important;
   border-radius: 0;
   height: 20px;
   text-align: center;
@@ -228,7 +238,43 @@ button {
   border-radius: 10px;
 }
 
-.single_contact div{
+.pb_bubble{
+  height: 24px;
+margin-right: 8px;
+}
+
+.single_contact p {
+  text-align: center;
+  
+}
+
+.single_contact div {
   display: flex;
   flex-direction: row;
+  align-items: center;
+}
+
+.contacts li {
+  opacity: 1;
+  padding-top: 16px;
+  padding-right: 10px;
+  padding-bottom: 16px;
+  padding-left: 10px;
+  gap: 8px;
+  border-radius: 10px;
+}
+
+
+#contacts {
+  max-height: 0;                /* collapsed by default */
+  overflow: hidden;             /* hide overflowing items */
+  opacity: 0;                   /* invisible */
+  transform: translateY(-10px); /* start a bit higher */
+  transition: all 0.3s ease;    /* smooth animation */
+}
+
+#contacts.open {
+  max-height: 200px;            /* adjust to fit your list */
+  opacity: 1;
+  transform: translateY(0);
 }
