--- a/style/contacts.css
+++ b/style/contacts.css
@@ -96,7 +96,7 @@ body {
     border-radius: 10px;
 }
 
-.contact-container:hover {
+.contact-container-hoverclass:hover{
     background: linear-gradient(#F9F9F9,#F0F0F0);
 }
 
@@ -244,15 +244,15 @@ body {
 }
 
 .overlay-card {
-    height: 592px;
-    width: 1212px;
+    height: 60%;
+    width: 80%;
     background-color: #FFFFFF;
     border-radius: 31px;
     display: flex;
 }
 
 .overlay-left-side {
-    width: 467px;
+    width: 40%;
     height: 100%;
     background-color: #2A3647;
     border: 1px solid black;
@@ -272,7 +272,7 @@ body {
     gap: 12px;
 }
 
-.add-content-card-headline {
+.add-contact-card-headline {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -287,7 +287,7 @@ body {
 }
 
 .overlay-right-side {
-    width: calc(1212px - 467px);
+    width: 60%;
     height: 100%;
     border-radius: 0 30px 30px 0;
     border: 1px solid black;
@@ -315,7 +315,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 64px;
+    gap: 48px;
 }
 
 .overlay-character-icon {
@@ -333,7 +333,7 @@ body {
 
 .create-form-inputfields {
     height: 215px;
-    width: 422px;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -346,7 +346,7 @@ body {
 
 .create-form>section>div>input {
     height: 50px;
-    width: 100%;
+    width: 422px;
     padding: 13px 21px;
     border: 1px solid #d1d1d1;
     border-radius: 10px;
@@ -383,6 +383,8 @@ body {
 
 .add-contact-cancel-btn {
     display: flex;
+    justify-content: center;
+    align-items: center;
     height: 56px;
     width: 126px;
     gap: 4px;
@@ -402,6 +404,8 @@ body {
 .add-contact-create-contact-btn {
     background-color: #2A3647;
     display: flex;
+    justify-content: center;
+    align-items: center;
     border-width: 0;
     height: 57px;
     width: 214px;
