--- a/style/board.css
+++ b/style/board.css
@@ -19,63 +19,7 @@
     display: flex;
     align-items: center;
     gap: 24px;
-    height: 50px;
-}
-
-.search-task{
-    position: relative;
-    display: flex;
-    align-items: center;
-    height: 50px;
-}
-
-.search-task input{
-    width: 200px;
-    padding: 8px 72px 8px 16px;
-    border: 1px solid rgba(168, 168, 168, 1);
-    border-radius: 10px;
-    font-size: 20px;
-    height: 32px;
-}
-
-.search-task input:focus{
-    outline: none;
-    border: 1px solid rgba(41, 171, 226, 1);
-}
-
-.search-divider{
-    position: absolute;
-    right: 60px;
-    top: 50%;
-    transform: translateY(-50%);
-    background-color: rgba(209, 209, 209, 1);
-    border-radius: 10px;
-    height: 70%;
-    width: 1px;
-}
-
-.search-logos img{
-    position: absolute;
-    top: 50%;
-    right: 50%;
-    transform: translate(50%, -50%);
-    cursor: pointer;
-}
-
-.search-logos{
-    height: 32px;
-    width: 32px;
-    position: absolute;
-    right: 16px;
-    border-radius: 50%;
-}
-
-.search-logos:hover{
-    background-color: rgba(194, 197, 199, 0.604);
-}
-
-.search-logo:active{
-    opacity: 0;
+    height: 48px;
 }
 
 .board-actions button{
@@ -88,12 +32,75 @@
     display: flex;
     align-items: center;
     gap: 8px;
-    height: 50px;
+    height: 100%;
     cursor: pointer;
 }
 
 .board-actions button:hover{
     background-color: rgba(41, 171, 226, 1);
+}
+
+.search-task{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border: 1px solid rgba(168, 168, 168, 1);
+    border-radius: 10px;
+    padding: 8px 16px;
+    height: 100%;
+    width: 312px;
+}
+
+.search-task:focus-within{
+    border-color: rgba(41, 171, 226, 1);
+}
+
+.search-task input{
+    border: none;
+    font-size: 20px;
+    height: 100%;
+    background-color: transparent;
+    width: 200px;
+}
+
+.search-task input:focus{
+    outline: none;
+}
+
+.search-task .search-button-section{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 48px;
+    gap: 16px;
+}
+
+.search-task .search-button-section .search-divider{
+    background-color: rgba(209, 209, 209, 1);
+    height: 30px;
+    width: 1px;
+}
+
+.search-button{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 32px;
+    height: 32px;
+    border-radius: 50%;
+}
+
+.search-button:hover{
+    background-color: rgb(168, 166, 166);
+    cursor: pointer;
+}
+
+.search-task svg{
+    fill: #2A3647;
+}
+
+.search-task svg:active{
+    fill: rgba(41, 171, 226, 1);
 }
 
 .kanban-board{
@@ -141,13 +148,16 @@
 }
 
 .task{
-    width: calc(100% - 32px);
+    width: 100%;
     height: auto;
     background-color: #ffffff;
     box-shadow: 0 0 10px 3px rgba(0, 0, 0, 0.08);
     border-radius: 24px;
     padding: 16px;
     cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
 }
 
 .no-task{
@@ -169,11 +179,9 @@
     border-radius: 8px;
     font-size: 16px;
     color: white;
-    margin-bottom: 24px;
 }
 
 .task-desc{
-    margin: 8px 0 24px 0;
     display: -webkit-box;
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;  
@@ -186,11 +194,10 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin-bottom: 24px;
 }
 
 .progress-track{
-    width: 88px;
+    width: 50%;
     height: 8px;
     border-radius: 16px;
     overflow: hidden;
