--- a/style/contacts.css
+++ b/style/contacts.css
@@ -244,15 +244,15 @@ body {
 }
 
 .overlay-card {
-    height: 60%;
-    width: 80%;
+    height: 594px;
+    width: 1212px;
     background-color: #FFFFFF;
     border-radius: 31px;
     display: flex;
 }
 
 .overlay-left-side {
-    width: 40%;
+    width: 467px;
     height: 100%;
     background-color: #2A3647;
     border: 1px solid black;
@@ -287,7 +287,7 @@ body {
 }
 
 .overlay-right-side {
-    width: 60%;
+    width: calc(1212px - 467px);
     height: 100%;
     border-radius: 0 30px 30px 0;
     border: 1px solid black;
@@ -315,7 +315,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 48px;
+    gap: 64px;
 }
 
 .overlay-character-icon {
@@ -323,11 +323,44 @@ body {
     width: 120px;
 }
 
+.add-contact-content-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+    padding: 48px 0;
+}
+
+.position-container-close-icon {
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-start;
+}
+
+.add-contact-close-icon-container {
+    cursor: pointer;
+    height: 32px;
+    width: 32px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.add-contact-close-icon-container:hover {
+    background-color: #D9D9D9;
+}
+
+.add-contact-close-icon {
+    cursor: pointer;
+    height: 24px;
+}
+
 .create-form {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin-top: 32px;
+    margin-bottom: 80px;
     gap: 32px;
 }
 
