--- a/style/navbar.css
+++ b/style/navbar.css
@@ -59,7 +59,6 @@
     height: 30px;
 }
 
-
 .navbar-footer {
     list-style: none;
     display: flex;
@@ -72,6 +71,10 @@
 .navbar-footer a {
     color: #A8A8A8;
     height: 35px;
+}
+
+.navbar-footer-link:hover {
+    color: #29ABE2;
 }
 
 .navbar-footer-link p {
