--- a/style/contacts.css
+++ b/style/contacts.css
@@ -96,8 +96,8 @@ body {
     border-radius: 10px;
 }
 
-.contact-container-hoverclass:hover{
-    background: linear-gradient(#F9F9F9,#F0F0F0);
+.contact-container-hoverclass:hover {
+    background: linear-gradient(#F9F9F9, #F0F0F0);
 }
 
 .svg-img-small {
@@ -149,7 +149,7 @@ body {
     align-items: flex-start;
     justify-content: space-between;
     gap: 21px;
-    margin-left: 72px;
+    margin-left: 48px;
     margin-top: 32px;
 }
 
@@ -157,7 +157,7 @@ body {
     display: flex;
     align-items: center;
     gap: 54px;
-    
+
 }
 
 .svg-img-big {
@@ -217,7 +217,7 @@ body {
 }
 
 .contact-edit-btn:hover .contact-btn-img-edit {
-     background-image: url('/assets/svg/edit_blue.svg');
+    background-image: url('/assets/svg/edit_blue.svg');
 }
 
 .contact-delete-btn {
@@ -274,16 +274,29 @@ body {
 .overlay {
     position: absolute;
     top: 0;
-    left: 150%;
+    left: 0;
     right: 0;
     height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    animation: fadeIn 300ms ease forwards;
+    animation: overlayShadow 300ms ease forwards;
+    background-color: rgba(0, 0, 0, 0);
+}
+
+.overlay-shadow-pos-rel-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    width: 100%;
+    position: relative;
 }
 
 .overlay-card {
+    position: absolute;
+    left: 100%;
+    animation: fadeIn 300ms ease-in forwards;
     height: 594px;
     width: 1212px;
     background-color: #FFFFFF;
@@ -519,7 +532,33 @@ body {
 }
 
 @keyframes fadeIn {
+
+    0% {
+        left: 100%;
+    }
+    25% {
+        left:75%;
+    }
+
+    50% {
+        left: 50%;
+    }
+
+    75% {
+        left: 25%;
+    }
+
+    90% {
+        left:10%;
+    }
+
     100% {
-        left:0;
+        left: auto;
+    }
+}
+
+@keyframes overlayShadow {
+    100% {
+        background-color: rgba(0, 0, 0, 0.2);
     }
 }
