--- a/style/navbar.css
+++ b/style/navbar.css
@@ -1,9 +1,37 @@
-.navbar {
+:root{
+    --nav-w: 280px;
+    --nav-color: #fff;
+    --nav-bg-color: #2a3647;
+    --side-color:var(--nav-bg-color);
+}
+
+.navbar{
+    z-index: 100;
+    overflow-y: auto;
+    gap: 24px;
+    display: flex;
+    flex-direction: column;
+    padding: 24px 16px;
+    background: var(--side-color);
+    color: var(--nav-bg-color);
+    width: var(--nav-w);
+    inset: 0 auto 0 0;
+    position: fixed;
+}
+
+/* .navbar {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
+} */
+.navbar-logo-container {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+
 
 .navbar-logo {
     margin-top: 80px;
@@ -16,20 +44,12 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    gap: 15px;
-    width: 100%;
     position: relative;
 }
 
 .nav-list li {
     display: flex;
     width: 100%;
-}
-
-.nav-list li a img {
-    /* position: absolute;
-    left: 50%; */
-    /* margin: auto; */
 }
 
 .navbar-link {
@@ -39,6 +59,7 @@
     gap: 8px;
     color: white;
     width: 100%;
+    text-decoration: none;
 }
 
 .navbar_img {
@@ -52,4 +73,7 @@
 
 .navbar-footer a {
     color: white;
+    text-decoration: none;
+    font-family: "Inter", serif;
+    font-weight: 400;
 }
