--- a/style/standart.css
+++ b/style/standart.css
@@ -9,12 +9,13 @@ body{
     display: flex;
     justify-content: center;
     font-family: 'Inter', sans-serif;
+    flex-direction: column;
 }
 
 .layout{
     display: flex;
     width: 100%;
-    max-width: 2160px;
+    max-width: 1440px;
 }
 
 nav{
@@ -31,12 +32,14 @@ main{
 }
 
 .main-header{
-    width: 100%;
-    height: 96px;
-    background-color: rgb(255, 255, 255);
-    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.1);
-    display: flex;
-    align-items: center;
+  width: 100%;
+  height: 96px;
+  background-color: var(--header-color);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  isolation: isolate;
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.1);
 }
 
 h2{
