--- a/style/login.css
+++ b/style/login.css
@@ -60,8 +60,6 @@ main {
 
 /* login section align and structure */
 .login_section {
-    height: 450px;
-    width: 600px;
     background-color: #ffffff;
     border-radius: 30px;
     display: flex;
@@ -69,6 +67,7 @@ main {
     align-items: center;
     flex-direction: column;
     box-shadow: 0px 0px 14px 3px #0000000A;
+    padding: 48px 115px;
     gap: 32px;
 }
 
@@ -97,6 +96,7 @@ main {
     width: 400px;
     border-radius: 10px;
     gap: 20px;
+    margin-bottom: 20px;
 }
 
 /* login section input group input style */
