--- a/style/login.css
+++ b/style/login.css
@@ -102,6 +102,7 @@ main {
 /* login section input group input style */
 .login_section .input_group input {
     width: 100%;
+    height: 24px;
     font-size: 20px;
     font-weight: 400;
     padding: 12px 21px;
@@ -110,7 +111,7 @@ main {
     border-radius: 10px;
 }
 
-/* input placeholder style */
+/* input focus and placeholder style */
 .login_section .input_group input::placeholder {
     color: #d1d1d1;
 }
