remove changes in standart.css and overworked class navbar

--- a/style/navbar.css
+++ b/style/navbar.css
@@ -9,6 +9,9 @@
     align-items: center;
     padding: 64px 0;
     max-height: 1024px;
+    height: 100vh;
+    background-color: #2A3647;
+    width: 232px;
 }
 
 .navbar-logo {
