--- a/style/keyframes.css
+++ b/style/keyframes.css
@@ -1,12 +1,26 @@
 @keyframes slideMidToLeft {
   from {
-    transform: translateY(0) translateX(0);
-    scale: 1;
+    width: 300px;
+    height: 300px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 16px;
   }
   to {
-    transform: translateY(-800px) translateX(-1450px);
-    scale: 0.4;
-    display: block;
+    width: 109px;
+    height: 134px;
+    position: absolute;
+    top: 67px;
+    left: 5%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 16px;
   }
     
 }
@@ -17,6 +31,6 @@
   }
   to {
     background-color: rgba(255, 255, 255, 0);
-  }
-    
+    display: none;
+  } 
 }
