--- a/style/contacts.css
+++ b/style/contacts.css
@@ -33,6 +33,16 @@ body {
     background-color: rgba(246, 247, 248, 1);
 }
 
+.main-contacts-header {
+    width: 100%;
+    height: 96px;
+    background-color: #ffffff;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.1);
+}
+
 .contacts-content {
     flex: 1;
     display: flex;
@@ -302,4 +312,3 @@ body {
 .contact-informations-phone-number {
     font-weight: 400;
 }
-
