--- a/style/navbar.css
+++ b/style/navbar.css
@@ -54,8 +54,8 @@
     gap: 8px;
 }
 
-.navbar-link:hover {
-    background-color: #091931;
+.navbar-link:hover:not(.navbar-active) {
+    background-color: #2A3D59;
 }
 
 .navbar_img {
@@ -88,4 +88,6 @@
 
 .navbar-active {
     background-color: #091931;
+    pointer-events: none;
+    cursor: default;
 }
