changed header in contacts.html and contacts.css

--- a/style/contacts.css
+++ b/style/contacts.css
@@ -26,6 +26,10 @@ body {
     width: calc(1440px - 232px);
 }
 
+.content-limit-header {
+    max-width: calc(1440px - 232px) ;
+}
+
 .contacts-main-content {
     display: flex;
     flex-direction: column;
