--- a/style/contacts.css
+++ b/style/contacts.css
@@ -59,10 +59,10 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    border-width: 0;
+    border: 1px solid #2A3647;
     border-radius: 10px;
     margin: 22.5px 0;
-    padding: 12px 16px;
+    padding: 12px 12px;
     gap: 16px;
     font-size: 21px;
     font-weight: 700;
@@ -70,11 +70,13 @@ body {
 
 .add-new-contact-btn:hover {
     background-color: #29abe2;
+    border: 1px solid #29ABE2;
     box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .add-new-contact-btn:active {
     background-color: #091931;
+    border: 1px solid #091931;
     box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
 }
 
@@ -211,22 +213,6 @@ body {
     background-color: rgba(0, 0, 0, 0);
 }
 
-.contact-btn-img {
-    width: 24px;
-    height: 24px;
-    background-position: center;
-    background-size: contain;
-    background-repeat: no-repeat;
-}
-
-.contact-btn-img-edit {
-    background-image: url('/assets/svg/edit.svg');
-}
-
-.contact-btn-img-delete {
-    background-image: url('/assets/svg/delete.svg');
-}
-
 .contact-edit-btn {
     width: 62px;
 }
@@ -235,8 +221,8 @@ body {
     min-width: 30px;
 }
 
-.contact-edit-btn:hover .contact-btn-img-edit {
-    background-image: url('/assets/svg/edit_blue.svg');
+.contact-edit-btn:hover svg path{
+    fill: #29ABE2;
 }
 
 .contact-delete-btn {
@@ -247,8 +233,8 @@ body {
     min-width: 50px;
 }
 
-.contact-delete-btn:hover .contact-btn-img-delete {
-    background-image: url('/assets/svg/delete_blue.svg');
+.contact-delete-btn:hover svg path {
+    fill: #29ABE2;
 }
 
 .contact-btn:hover {
